--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--Creation of the TicTacToe board -->
     <div id="board">
         <h1>Tic Tac Toe</h1>
+        <h2>Player 1 Turn!</h2>
 
         <div class="row">
             <div class="top left"></div>
@@ -34,6 +35,7 @@
         </div>
     </div>
 
+    <script src="app.js"></script>
 </body>
 
 </html>
