Added some color...for fun.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!--Creation of the TicTacToe board -->
     <div id="board">
-        <h1>Tic Tac Toe</h1>
+        <h1>TicTacToe #</h1>
         <h2>Player 1 Turn!</h2>
 
         <div class="row">
